--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="hello">Hey there,</string>
     <string name="create_account">Create an Account</string>
     <string name="welcome">Welcome Back</string>
+    <string name="first_name">First name</string>
     <string name="last_name">Last name</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
