--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hide_password" translatable="false">Hide password</string>
     <string name="Show_password" translatable="false">Show password</string>
     <string name="terms_and_conditions">By continuing you  accept our Privacy Policy and Term of Use</string>
+    <string name="terms_and_conditions_header">Term of Use</string>
 </resources>
