--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="Show_password" translatable="false">Show password</string>
     <string name="terms_and_conditions">By continuing you  accept our Privacy Policy and Term of Use</string>
     <string name="terms_and_conditions_header">Term of Use</string>
+    <string name="register">Register</string>
+    <string name="login">Login</string>
 </resources>
