--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="terms_and_conditions_header">Term of Use</string>
     <string name="register">Register</string>
     <string name="login">Login</string>
+    <string name="or">or</string>
 </resources>
