--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="register">Register</string>
     <string name="login">Login</string>
     <string name="or">or</string>
+    <string name="go_to_login">Already have an account? Login</string>
 </resources>
